--- a/spec/fixtures/vcr_cassettes/park_information_requests/happy_path/can_pull_different_number_of_parks_with_state.yml
+++ b/spec/fixtures/vcr_cassettes/park_information_requests/happy_path/can_pull_different_number_of_parks_with_state.yml
@@ -21,11 +21,11 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 17 Jun 2021 19:16:38 GMT
+      - Thu, 17 Jun 2021 20:22:14 GMT
       Content-Type:
       - application/json; charset=UTF-8
-      Content-Length:
-      - '5161'
+      Transfer-Encoding:
+      - chunked
       Connection:
       - keep-alive
       Vary:
@@ -34,7 +34,7 @@ http_interactions:
       X-Ratelimit-Limit:
       - '1000'
       X-Ratelimit-Remaining:
-      - '983'
+      - '961'
       Strict-Transport-Security:
       - max-age=31536000; preload
       - max-age=31536000; preload
@@ -49,7 +49,7 @@ http_interactions:
       Access-Control-Allow-Origin:
       - "*"
       Age:
-      - '0'
+      - '1'
       Via:
       - https/1.1 api-umbrella (ApacheTrafficServer [cMsSf ])
       X-Cache:
@@ -181,5 +181,5 @@ http_interactions:
         and Fall: temperatures and rainfall variable. Peak fall foliage is usually
         mid-October.\"\r\n\r\n,\"name\":\"Bluestone\"\r\n\r\n,\"designation\":\"National
         Scenic River\"\r\n\r\n\r\n}\r\n\r\n]\r\n}\r\n"
-  recorded_at: Thu, 17 Jun 2021 19:16:38 GMT
+  recorded_at: Thu, 17 Jun 2021 20:22:14 GMT
 recorded_with: VCR 6.0.0
