Travis: try changing script to the commands I run

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ addons:
 cache:
 - bundler
 script:
-- bundle exec rails db:{create,migrate} RAILS_ENV=test
-- bundle exec rspec
+- rails db:{create,migrate} RAILS_ENV=test
+- rspec
 deploy:
   provider: heroku
   api_key:
