--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rbenv:
 addons:
   postgresql: 9.6
 script:
-- RAILS_ENV=test bundle exec rake db:test:prepare --trace
+- bundle exec rails db:{create,migrate} RAILS_ENV=test
 - bundle exec rspec
 deploy:
   provider: heroku
