--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: ruby
+rbenv:
+- 2.5.3
+addons:
+  postgresql: 9.6
 cache:
 - bundler
-before_script:
-- bundle exec rake db:create
-- bundle exec rake db:migrate
+script:
+- bundle exec rails db:{create,migrate} RAILS_ENV=test
+- bundle exec rspec
 deploy:
   provider: heroku
   api_key:
