--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
 - bundler
 script:
 - bundle exec rails db:{create,migrate} RAILS_ENV=test
-- bundle exec rspec
+- rspec
 deploy:
   provider: heroku
   api_key:
