--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: ruby
-rbenv:
+rvm:
 - 2.5.3
+dist: trusty
 addons:
   postgresql: 9.6
-cache:
-- bundler
 script:
-- bundle exec rails db:{create,migrate} RAILS_ENV=test
-- bundle exec rspec RAILS_ENV=test
+- bundle install --jobs=3 --retry=3
+- bundle exec rake db:create
+- bundle exec rake db:migrate
+- bundle exec rspec
 deploy:
   provider: heroku
   api_key:
