--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ dist: trusty
 addons:
   postgresql: 9.6
 script:
+- gem install bundler -v '2.2.20'
 - bundle install --jobs=3 --retry=3
 - bundle exec rake db:create
 - bundle exec rake db:migrate
