--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ dist: trusty
 addons:
   postgresql: 9.6
 script:
+- bundle update --bundler
 - bundle exec rake db:create
 - bundle exec rake db:migrate
 - bundle exec rspec
